--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 pypdf==5.4.0
-python-dotenv==1.0.1
 pytz==2025.1
 PyYAML==6.0.2
 sniffio==1.3.1
@@ -28,3 +27,7 @@ sounddevice==0.5.1
 tqdm==4.67.1
 types-PyYAML==6.0.12.20241230
 typing_extensions==4.12.2
+requests==2.32.3
+beautifulsoup4==4.12.3
+pymongo==4.8.0
+python-dotenv==1.0.1
